# JOBSPLS

./: README.md
.github/workflows/: rust.yml
C/: .clangd  Makefile  collections.h  search.h
C/book_work/: copy_file.c  copyfile.c
C/collections/: vector.c  vector.h
C/search/: binary.c  binary.h
C/tests/: all.c
CPP/: .clangd  CMakeLists.txt  main.cpp  neet.hpp  search.hpp
CPP/neet/: anagram.cpp  anagram.hpp  concat.cpp  concat.hpp  consec_sequence.hpp  containsduplicate.cpp  containsduplicate.hpp  group_anagrams.cpp  group_anagrams.hpp  happy_prefix.cpp  happy_prefix.hpp  josephus.cpp  kth_largest.cpp  kth_largest.hpp  last_word_len.cpp  last_word_len.hpp  longest_prefix.cpp  longest_prefix.hpp  prod_sans_self.hpp  replace_vals_right.cpp  replace_vals_right.hpp  substring.cpp  substring.hpp  two_sum.hpp  valid_palindrome.cpp  valid_palindrome.hpp
CPP/search/: binary.hpp
CPP/tests/: consec_sequence.cpp  containsdupe_test.cpp  longest_prefix_test.cpp  substring.cpp
Go/: go.mod
Go/binary_search/: go.mod  search.go
Go/jobspls/: go.mod
Go/jobspls/algorithms/: binary_gap.go  count_div.go  cyclic.go  frog_jump.go  (+8 more)
Kotlin/: .gitignore  build.gradle.kts  settings.gradle.kts
Kotlin/binary_search/: binary_search.kt
Python/: pyproject.toml
Python/jobspls/: pyproject.toml
Python/jobspls/algorithms/: binary_gap.py  cyclic.py
Python/jobspls/binary_search/: __init__.py  search.py
Python/jobspls/insertion_sort/: __init__.py  sort.py
Python/jobspls/neet/: anagram.py
Python/jobspls/search/: __init__.py  binary.py  binary.pyi
Python/jobspls/sort/: __init__.py  insertion.py  insertion.pyi  merge.py  merge.pyi  selection.py
Python/jobspls/src/jobspls/sort/: merge.py  selection.pyi
Python/jobspls/tests/: fixtures.py  test_binary_search.py
Python/jobspls/types/: __init__.py  containers.py  protocols.py
Python/tests/: fixtures.py
Rust/jobspls/: Cargo.toml
Rust/jobspls/src/: codility.rs  lib.rs  neet.rs
Rust/jobspls/src/codility/: binary_gap.rs  rotate_slice.rs  smallest_pos_int.rs
Rust/jobspls/src/neet/: anagram.rs  concat.rs  consec_sequence.rs  containsdupes.rs  group_anagrams.rs  kth_largest.rs  last_word_len.rs  longest_prefix.rs  prod_sans_self.rs  replace_vals_right.rs  substring.rs  two_sum.rs  two_sum_ordered.rs  valid_palindrome.rs
Rust/jobspls/src/search/: binary.rs
TypeScript/: deno.jsonc  dev_deps.ts
TypeScript/binary_search/: binary_search.ts
Zig/: build.zig  jobspls.zig  search.zig
Zig/search/: binary.zig
Zig/src/: neet.zig  search.zig  strings.zig  tests.zig  traits.zig
Zig/tests/: common.zig
Zig/traits/: partialord.zig
(+53 files in other folders)
